# Testing

./: README.md  SoapUI.xlsx  З1_Таблица принятия решений.xlsx  З2_Попарное тестирование.xlsx  З3_Входные значения.xlsx  МКС для функционала Симфонии по Типам документов и справочникам.xlsx  Матрица трассируемости требований.xlsx  Оценки трудозатрат по задаче.xlsx  Практическая работа 2 DevTools.docx  ТЗ Тестировщик Наймикс.docx
Postman/: Postman.xlsx  (+2 more)
Автотесты/Architecture_UI_tests/: Dockerfile  README.md  pyproject.toml  pytest.ini
Автотесты/Architecture_UI_tests/docs/: README.md
Автотесты/Architecture_UI_tests/src/: conf.py
Автотесты/Architecture_UI_tests/src/support/: hundlers.py
Автотесты/Architecture_UI_tests/src/support/logging/: logger.py
Автотесты/Architecture_UI_tests/src/support/logging/handlers/: _abc.py  console_handler.py  file_handler.py  memory_handler.py
Автотесты/Architecture_UI_tests/src/ui/enums/: __init__.py  color.py  column_type.py
Автотесты/Architecture_UI_tests/src/ui/enums/users/: roles.py
Автотесты/Architecture_UI_tests/src/ui/locators/: base_locator.py
Автотесты/Architecture_UI_tests/src/utils/: add_autotest_to_testit.py  generator_id.py  gherkin2testit_model.py  send_result2telegram.py  test_it_fix.py  update_autotests_by_api_changes.py
Автотесты/Architecture_UI_tests/tests/: conftest.py  test_all.py
Автотесты/Architecture_UI_tests/tests/features/authorization/: authorization.feature
Автотесты/Architecture_UI_tests/tests/fixtures/: logger.py
Автотесты/Architecture_UI_tests/tests/steps/authorization/: authorization.py
(+82 files in other folders)
